Add vars with default valeus.

--- a/roles/salt-master/templates/config.j2
+++ b/roles/salt-master/templates/config.j2
@@ -3,7 +3,7 @@ interface: {{ salt_master.interface }}
 
 # Whether the master should listen for IPv6 connections. If this is set to True,
 # the interface option must be adjusted, too. (For example: "interface: '::'")
-ipv6: False
+ipv6: {{ salt_master.ipv6 }}
 
 # The tcp port used by the publisher:
 publish_port: {{ salt_master.publish_port }} 
